--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap"
-      rel="stylesheet"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style/shared.css" />
+    <link rel="stylesheet" href="style/index.css" />
     <title>Kraken's Whishlist</title>
   </head>
   <body>
@@ -15,14 +18,20 @@
       </div>
       <nav>
         <ul>
-            <li><a href="/games.html">Games</a></li>
-            <li><a href="/about-me.html">About me</a></li>
+          <li><a href="/games.html">Games</a></li>
+          <li><a href="/about-me.html">About me</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <section></section>
-      <section></section>
+      <section id="hero">
+        <div id="hero-content">
+          <h1>Kraken's Whishlist</h1>
+          <p>Check what games I want to play!</p>
+          <a href="/games.html">Click here!</a>
+        </div>
+      </section>
+      <section id="highlights"></section>
     </main>
     <footer></footer>
   </body>
