section 2 with game images
Adding another section in index.html with styling. Adding necessary images.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       </div>
       <nav>
         <ul>
-          <li><a href="/games.html">Games</a></li>
-          <li><a href="/about-me.html">About me</a></li>
+          <li><a href="games.html">Games</a></li>
+          <li><a href="about-me.html">About me</a></li>
         </ul>
       </nav>
     </header>
@@ -28,11 +28,29 @@
         <div id="hero-content">
           <h1>Kraken's Whishlist</h1>
           <p>Check what games I want to play!</p>
-          <a href="/games.html">Click here!</a>
+          <a href="games.html">Click here!</a>
         </div>
       </section>
-      <section id="highlights"></section>
+      <section id="highlights">
+        <h2>Someday I will play</h2>
+        <ul id="games">
+          <li class="games">
+            <img src="images/games/assasin.jpg" alt="assasin-val" />
+            <p>Assassin's Creed: Valhalla</p>
+          </li>
+          <li class="games">
+            <img src="images/games/evil.jpg" alt="evil-pic" />
+            <p>Resident Evil Village</p>
+          </li>
+          <li class="games">
+            <img src="images/games/raft.jpg" alt="raft" />
+            <p>Raft</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      
+    </footer>
   </body>
 </html>
