--- a/index.html
+++ b/index.html
@@ -50,7 +50,18 @@
       </section>
     </main>
     <footer>
-      
+      <ul>
+        <li>
+          <a href="https://steamcommunity.com/profiles/76561198059228197"
+            ><img src="/images/icons/steam-logo.png" alt="steam logo"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/karolina-sorys-56549020a/"
+            ><img src="/images/icons/linkedin-logo.png" alt="linkedin logo"
+          /></a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
