Add games css, correct spelling

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     />
     <link rel="stylesheet" href="style/shared.css" />
     <link rel="stylesheet" href="style/index.css" />
-    <title>Kraken's Whishlist</title>
+    <title>Kraken's Wishlist</title>
   </head>
   <body>
     <header id="container">
       <div id="page-logo">
-        <a href="index.html">Whishlist</a>
+        <a href="index.html">Wishlist</a>
       </div>
       <nav>
         <ul>
@@ -26,7 +26,7 @@
     <main>
       <section id="hero">
         <div id="hero-content">
-          <h1>Kraken's Whishlist</h1>
+          <h1>Kraken's Wishlist</h1>
           <p>Check what games I want to play!</p>
           <a href="games.html">Click here!</a>
         </div>
