add card list v.1

--- a/games.html
+++ b/games.html
@@ -25,7 +25,25 @@
     </header>
 
     <main>
-        
+      <ul>
+        <li>
+          <img src="images/games/assasin.jpg" alt="assasin img" />
+          <div class="item-content">
+            <h2>Assassin's Creed: Valhalla</h2>
+            <p>
+              The twelfth main installment of the best-selling series from
+              Ubisoft. Assassin's Creed: Valhalla is an action RPG game that
+              takes us to 9th-century England. During the game, we play the role
+              of Eivor, whose Viking clan is looking for a new home for itself.
+            </p>
+            <div class="actions">
+              <a
+                href="https://www.ubisoft.com/pl-pl/game/assassins-creed/valhalla"
+                >Explore</a>
+            </div>
+          </div>
+        </li>
+      </ul>
     </main>
 
     <footer>
