--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
       <ul>
         <li>
           <a href="https://steamcommunity.com/profiles/76561198059228197"
-            ><img src="/images/icons/steam-logo.png" alt="steam logo"
+            ><img src="images/icons/steam-logo.png" alt="steam logo"
           /></a>
         </li>
         <li>
           <a href="https://www.linkedin.com/in/karolina-sorys-56549020a/"
-            ><img src="/images/icons/linkedin-logo.png" alt="linkedin logo"
+            ><img src="images/icons/linkedin-logo.png" alt="linkedin logo"
           /></a>
         </li>
       </ul>
