add card llist v1.1
adding styles for more list item

--- a/games.html
+++ b/games.html
@@ -43,6 +43,35 @@
             </div>
           </div>
         </li>
+        <li>
+          <img src="images/games/evil.jpg" alt="evil img" />
+          <div class="item-content">
+            <h2>Resident Evil Village</h2>
+            <p>
+              This is a survival horror that has never been before - the eighth installment of the legendary Resident Evil series, i.e. 
+              Resident Evil Village. Realistic graphics, first-person action and masterful plot will make the feeling of danger real like never before.
+            </p>
+            <div class="actions">
+              <a
+                href="https://store.steampowered.com/app/1196590/Resident_Evil_Village/"
+                >Explore</a>
+            </div>
+        </li>
+        <li>
+          <img src="images/games/raft.jpg" alt="raft img" />
+          <div class="item-content">
+            <h2>Raft</h2>
+            <p>
+              Raft throws you and your friends into an epic oceanic adventure! 
+              Alone or together, players battle to survive a perilous voyage across a vast sea! Gather debris, scavenge reefs and build your own floating home, but be wary of the man-eating sharks!
+            </p>
+            <div class="actions">
+              <a
+                href="https://store.steampowered.com/app/648800/Raft/"
+                >Explore</a>
+            </div>
+
+        </li>
       </ul>
     </main>
 
